--- a/src/firefox/global/variables.scss
+++ b/src/firefox/global/variables.scss
@@ -11,5 +11,6 @@
 	--button-min-height: unset;
 	--button-opacity-disabled: 1;
 
+	--content-area-shadow: none;
 	--space-xsmall: 2px;
 }
